--- a/src/assets/styles/layouts/_home.scss
+++ b/src/assets/styles/layouts/_home.scss
@@ -1,50 +1,97 @@
-* {
+// Estilos de etiquetas generales
+html {
   box-sizing: border-box;
+  height: 100%;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  display: flex;
-  height: 100vh;
-  margin: 0;
-  padding: 2rem;
-  font-family: $font-family-sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  background-color: $uoc-bg;
-  color: $uoc-corporate;
+  font-family: $body-font;
+  color: $text;
 }
 
-.uoc-container {
-  max-width: 800px;
-  margin: auto;
-  padding: 2rem;
-  border-radius: 2rem;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
-    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+// Estilo básico y Layout
+main {
+  max-width: 45em;
+  margin: 0 auto;
+  position: relative;
+  padding: 1em;
 }
 
-.uoc-logo {
+:-ms-input-placeholder, :root main {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 1.5rem;
-  max-width: 200px;
-  height: auto;
-
-  @media (min-width: $mqMinWidth) {
-    max-width: 350px;
-  }
 }
 
-.uoc-title {
-  font-family: $font-family-serif;
-  font-size: 24px;
-  font-weight: 700;
-  color: $uoc-corporate;
+h1 {
+  font-family: $header-font;
+  color: $accent;
+  font-size: calc(2em + 5vw);
+  margin-bottom: 0.25em;
+}
 
-  @media (min-width: $mqMinWidth) {
-    font-size: 36px;
-  }
+h2 {
+  text-transform: uppercase;
+  font-size: calc(1em + 0.5vw);
+  color: lighten($text, 50%);
+  margin-bottom: 1em;
+}
+
+hr {
+  opacity: 0;
+}
+
+.about {
+  line-height: 1.3;
+  margin-bottom: 1em;
+}
+
+a {
+  display: block;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: $text;
+  margin-bottom: 2em;
+  font-weight: bold;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.location {
+  text-transform: uppercase;
+  line-height: 1.5;
+  font-weight: bold;
+}
+
+button {
+  border: 0;
+  background-color: $accent;
+  color: $main;
+  text-transform: uppercase;
+  font-size: 100%;
+  padding: 1em 2em;
+  position: absolute;
+  right: 1em;
+  bottom: 1em;
+}
+.boton {
+  border: 0;
+  background-color: $accent;
+  color: $main;
+  text-transform: uppercase;
+  font-size: 100%;
+  padding: 1em 2em;
+  position: absolute;
+  right: 1em;
+  bottom: 1em;
 }
