--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -7,7 +7,7 @@
  * Import variables
  */
 
-//@import "variables";
+@import "variables";
 
 /**
  * Import npm dependencies
@@ -23,128 +23,16 @@
  * It's a best practice to use a different partial for each page
  */
 
-//@import "layouts/home";
+@import "layouts/home";
 
 /**
  * Do NOT include anything else in this file!
  */
 
  // // Settings
-@font-face {
-  font-family: 'Galatia SIL';
-  src: url('https://www.chenhuijing.com/demos/grids-tycho/fonts/galsilb.eot');
-  src: url('https://www.chenhuijing.com/demos/grids-tycho/fonts/galsilb.eot?#iefix') format('embedded-opentype'),
-    url('https://www.chenhuijing.com/demos/grids-tycho/fonts/galsilb.woff2') format('woff2'),
-    url('https://www.chenhuijing.com/demos/grids-tycho/fonts/galsilb.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
 
-$header-font: 'Galatia SIL', Georgia, serif;
-$body-font: 'Avenir Book', 'Franklin Gothic Medium', Helvetica, Arial, sans-serif;
 
-$main: #fff;
-$accent: #fe320f;
-$text: #282828;
-
-// General styles
-html {
-  box-sizing: border-box;
-  height: 100%;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: $body-font;
-  color: $text;
-}
-
-// Basic styles and layout
-main {
-  max-width: 45em;
-  margin: 0 auto;
-  position: relative;
-  padding: 1em;
-}
-
-:-ms-input-placeholder, :root main {
-  display: block;
-}
-
-h1 {
-  font-family: $header-font;
-  color: $accent;
-  font-size: calc(2em + 5vw);
-  margin-bottom: 0.25em;
-}
-
-h2 {
-  text-transform: uppercase;
-  font-size: calc(1em + 0.5vw);
-  color: lighten($text, 50%);
-  margin-bottom: 1em;
-}
-
-hr {
-  opacity: 0;
-}
-
-.about {
-  line-height: 1.3;
-  margin-bottom: 1em;
-}
-
-a {
-  display: block;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: $text;
-  margin-bottom: 2em;
-  font-weight: bold;
-}
-
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.location {
-  text-transform: uppercase;
-  line-height: 1.5;
-  font-weight: bold;
-}
-
-button {
-  border: 0;
-  background-color: $accent;
-  color: $main;
-  text-transform: uppercase;
-  font-size: 100%;
-  padding: 1em 2em;
-  position: absolute;
-  right: 1em;
-  bottom: 1em;
-}
-.boton {
-  border: 0;
-  background-color: $accent;
-  color: $main;
-  text-transform: uppercase;
-  font-size: 100%;
-  padding: 1em 2em;
-  position: absolute;
-  right: 1em;
-  bottom: 1em;
-}
-// Grid layout for wide display
+// Pantalla completa
 @supports (display:grid) {
   @media (min-width: 42em) and (min-height: 27em) {
     main {
